--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="global.css">
 
+<title>Portfolio</title>
+
 <body>
     <div id="navBar">
         Matthew Molski
