--- a/index.html
+++ b/index.html
@@ -14,35 +14,66 @@
             <a class="aContain" href='https://github.com/MattMatt05/NumberGame'>
                 <img src="assets/ng.png">
             </a>
-            <p>Number Game 2025</p>
+            <p id="projectName">Number Game 2025</p>
+            <div class="textContainer">
+                <p>Java</p>
+                <p>JUnit</p>
+                <p>Math</p>
+            </div>
         </div>
         <div class="project">
             <a class="aContain" href='https://github.com/MattMatt05/FamilyTreeSoftware'>
                 <img src="assets/ftsw.png">
             </a>
-            <p>Family Tree 2024</p>
+            <p id="projectName">Family Tree 2024</p>
+            <div class="textContainer">
+                <p>Java</p>
+                <p>JUnit</p>
+                <p>JSON</p>
+                <p>OOP</p>
+            </div>
         </div>
         <div class="project">
             <img src="assets/sv.png">
-            <p>Star Visualizer 2024</p>
+            <p id="projectName">Star Visualizer 2024</p>
+            <div class="textContainer">
+                <p>Python</p>
+                <p>Turtle</p>
+                <p>Data visualization</p>
+            </div>
         </div>
         <div class="project">
             <a class="aContain"
                 href='https://github.com/haovvrld/DSCI-009-Group-17-Proposal/blob/main/DSC_009_group_17_final_project.ipynb'>
                 <img src="assets/sc.png">
             </a>
-            <p>Star Classification 2023</p>
+            <p id="projectName">Star Classification 2023</p>
+            <div class="textContainer">
+                <p>R</p>
+                <p>KNN Classification</p>
+                <p>Data Visualization</p>
+                <p>Machine Learning</p>
+            </div>
         </div>
         <div class="project">
-            <a class="aContain"
-                href='https://elginparksecondary.com/home.html'>
+            <a class="aContain" href='https://elginparksecondary.com/home.html'>
                 <img src="assets/eps.png">
             </a>
-            <p>Elgin Park Secondary 2023</p>
+            <p id="projectName">Elgin Park Secondary 2023</p>
+            <div class="textContainer">
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Javascript</p>
+            </div>
         </div>
         <div class="project">
-                <img src="assets/tsw.png">
-            <p>Tournament Software 2019</p>
+            <img src="assets/tsw.png">
+            <p id="projectName">Tournament Software 2019</p>
+            <div class="textContainer">
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Javascript</p>
+            </div>
         </div>
     </div>
 </body>
