Final Push of night

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </a>
             <p id="projectName">Number Game 2025</p>
             <div class="textContainer">
-                <p>Java</p>
-                <p>JUnit</p>
-                <p>Math</p>
+                <p class="tag">Java</p>
+                <p class="tag">JUnit</p>
+                <p class="tag">Math</p>
             </div>
         </div>
         <div class="project">
@@ -27,19 +27,19 @@
             </a>
             <p id="projectName">Family Tree 2024</p>
             <div class="textContainer">
-                <p>Java</p>
-                <p>JUnit</p>
-                <p>JSON</p>
-                <p>OOP</p>
+                <p class="tag">Java</p>
+                <p class="tag">JUnit</p>
+                <p class="tag">JSON</p>
+                <p class="tag">OOP</p>
             </div>
         </div>
         <div class="project">
             <img src="assets/sv.png">
             <p id="projectName">Star Visualizer 2024</p>
             <div class="textContainer">
-                <p>Python</p>
-                <p>Turtle</p>
-                <p>Data visualization</p>
+                <p class="tag">Python</p>
+                <p class="tag">Turtle</p>
+                <p class="tag">Data visualization</p>
             </div>
         </div>
         <div class="project">
@@ -49,10 +49,10 @@
             </a>
             <p id="projectName">Star Classification 2023</p>
             <div class="textContainer">
-                <p>R</p>
-                <p>KNN Classification</p>
-                <p>Data Visualization</p>
-                <p>Machine Learning</p>
+                <p class="tag">R</p>
+                <p class="tag">KNN Classification</p>
+                <p class="tag">Data Visualization</p>
+                <p class="tag">Machine Learning</p>
             </div>
         </div>
         <div class="project">
@@ -61,18 +61,18 @@
             </a>
             <p id="projectName">Elgin Park Secondary 2023</p>
             <div class="textContainer">
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>Javascript</p>
+                <p class="tag">HTML</p>
+                <p class="tag">CSS</p>
+                <p class="tag">Javascript</p>
             </div>
         </div>
         <div class="project">
             <img src="assets/tsw.png">
             <p id="projectName">Tournament Software 2019</p>
             <div class="textContainer">
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>Javascript</p>
+                <p class="tag">HTML</p>
+                <p class="tag">CSS</p>
+                <p class="tag">Javascript</p>
             </div>
         </div>
     </div>
