Navigation Bar complete

--- a/index.html
+++ b/index.html
@@ -1,79 +1,29 @@
 <!DOCTYPE html>
 <HTML>
-<meta content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="global.css">
 
-<title>Portfolio</title>
+<head>
+    <meta content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">
+
+    <title>Portfolio</title>
+</head>
 
 <body>
-    <div id="navBar">
-        Matthew Molski
-    </div>
-    <div class="container">
-        <div class="project">
-            <a class="aContain" href='https://github.com/MattMatt05/NumberGame'>
-                <img src="assets/ng.png">
-            </a>
-            <p id="projectName">Number Game 2025</p>
-            <div class="textContainer">
-                <p class="tag">Java</p>
-                <p class="tag">JUnit</p>
-                <p class="tag">Math</p>
-            </div>
-        </div>
-        <div class="project">
-            <a class="aContain" href='https://github.com/MattMatt05/FamilyTreeSoftware'>
-                <img src="assets/ftsw.png">
-            </a>
-            <p id="projectName">Family Tree 2024</p>
-            <div class="textContainer">
-                <p class="tag">Java</p>
-                <p class="tag">JUnit</p>
-                <p class="tag">JSON</p>
-                <p class="tag">OOP</p>
-            </div>
-        </div>
-        <div class="project">
-            <img src="assets/sv.png">
-            <p id="projectName">Star Visualizer 2024</p>
-            <div class="textContainer">
-                <p class="tag">Python</p>
-                <p class="tag">Turtle</p>
-                <p class="tag">Data visualization</p>
-            </div>
-        </div>
-        <div class="project">
-            <a class="aContain"
-                href='https://github.com/haovvrld/DSCI-009-Group-17-Proposal/blob/main/DSC_009_group_17_final_project.ipynb'>
-                <img src="assets/sc.png">
-            </a>
-            <p id="projectName">Star Classification 2023</p>
-            <div class="textContainer">
-                <p class="tag">R</p>
-                <p class="tag">KNN Classification</p>
-                <p class="tag">Data Visualization</p>
-                <p class="tag">Machine Learning</p>
-            </div>
-        </div>
-        <div class="project">
-            <a class="aContain" href='https://elginparksecondary.com/home.html'>
-                <img src="assets/eps.png">
-            </a>
-            <p id="projectName">Elgin Park Secondary 2023</p>
-            <div class="textContainer">
-                <p class="tag">HTML</p>
-                <p class="tag">CSS</p>
-                <p class="tag">Javascript</p>
-            </div>
-        </div>
-        <div class="project">
-            <img src="assets/tsw.png">
-            <p id="projectName">Tournament Software 2019</p>
-            <div class="textContainer">
-                <p class="tag">HTML</p>
-                <p class="tag">CSS</p>
-                <p class="tag">Javascript</p>
-            </div>
+    <!--Navigation Bar-->
+    <div class="navbar">
+        <div class="container flex">
+            <p class="navName">
+                Matthew Molski
+            </p>
+            <nav>
+                <ul>
+                    <li><a href="">About Me</a></li>
+                    <li><a href="">My Work</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 </body>
