--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
         <div class="container flex">
             <p class="navName">
-                Matthew Molski
+                Matthew Molski test
             </p>
             <nav>
                 <ul>
