--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
 
     <title>Portfolio</title>
@@ -13,7 +15,7 @@
     <div class="navbar">
         <div class="container flex">
             <p class="navName">
-                Matthew Molski test
+                Matthew Molski
             </p>
             <nav>
                 <ul>
