--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
 
     <title>Portfolio</title>
@@ -26,6 +27,22 @@
             </nav>
         </div>
     </div>
+    <!--Intro Segment-->
+    <section class="introSegment">
+        <div class="container grid">
+            <div class="visualDesign">
+                <div class="visualizeMe">
+                    <img src="assets/me.png" alt="Portrait Photo">
+                </div>
+            </div>
+            <div class="introText">
+                <h1>Welcome!</h1>
+                <h3>I'm Matthew Molski<br>UBC Math & Data Science</h3>
+                <h3>Software Developer<br>Aspiring Data Scientist</h3>
+                <a class="myWorkButton" href="">My Work</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </HTML>
