--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
         <div class="container grid">
             <div class="visualDesign">
                 <div class="visualizeMe">
+                    <div class="semicircle"></div>
                     <img src="assets/me.png" alt="Portrait Photo">
                 </div>
             </div>
             <div class="introText">
                 <h1>Welcome!</h1>
                 <h3>I'm Matthew Molski<br>UBC Math & Data Science</h3>
-                <h3>Software Developer<br>Aspiring Data Scientist</h3>
+                <br>
+                <h4>Software Developer<br>Aspiring Data Scientist</h4>
                 <a class="myWorkButton" href="">My Work</a>
             </div>
         </div>
