--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <div class="visualizeMe">
                     <img src="assets/me.png" alt="Portrait Photo">
                     <div class="semicircle"></div>
+                    <div class="medium-circle"></div>
+                    <img class="triangle-1"></img>
+                    <img class="triangle-2"></img>
+                    <img class="triangle-3"></img>
+                    <img class="triangle-4"></img>
+                    <img class="triangle-5"></img>
+                    <img class="triangle-6"></img>
+                    <img class="triangle-7"></img>
+                    <img class="triangle-8"></img>
                 </div>
             </div>
             <div class="introText">
