--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                     <img src="assets/me.png" alt="Portrait Photo">
                     <div class="semicircle"></div>
                     <div class="medium-circle"></div>
-                    <img class="triangle-1"></img>
-                    <img class="triangle-2"></img>
-                    <img class="triangle-3"></img>
-                    <img class="triangle-4"></img>
-                    <img class="triangle-5"></img>
-                    <img class="triangle-6"></img>
-                    <img class="triangle-7"></img>
-                    <img class="triangle-8"></img>
+                    <img src="assets/triangle.svg" class="triangle-1"></img>
+                    <img src="assets/triangle.svg" class="triangle-2"></img>
+                    <img src="assets/triangle.svg" class="triangle-3"></img>
+                    <img src="assets/triangle.svg" class="triangle-4"></img>
+                    <img src="assets/triangle.svg" class="triangle-5"></img>
+                    <img src="assets/triangle.svg" class="triangle-6"></img>
+                    <img src="assets/triangle.svg" class="triangle-7"></img>
+                    <img src="assets/triangle.svg" class="triangle-8"></img>
                 </div>
             </div>
             <div class="introText">
