--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                     <img src="assets/triangle.svg" class="triangle-6"></img>
                     <img src="assets/triangle.svg" class="triangle-7"></img>
                     <img src="assets/triangle.svg" class="triangle-8"></img>
+                    <div class="circle-1"></div>
+                    <div class="circle-2"></div>
+                    <div class="circle-3"></div>
+                    <div class="circle-4"></div>
+                    <div class="circle-5"></div>
+                    <div class="circle-6"></div>
+                    <div class="circle-7"></div>
                 </div>
             </div>
             <div class="introText">
