--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1.0">
+    <link rel="preload" as="image" href="assets/me.png">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="assets/me.png">
     <link rel="stylesheet" href="global.css">
 
     <title>Portfolio</title>
@@ -33,7 +33,7 @@
         <div class="container grid">
             <div class="visualDesign">
                 <div class="visualizeMe">
-                    <img src="assets/me.png" alt="Portrait Photo">
+                    <img src="assets/big-me.png" alt="Portrait Photo" fetchpriority="high">
                     <div class="semicircle"></div>
                     <div class="medium-circle"></div>
                     <img src="assets/triangle.svg" class="triangle-1"></img>
