--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                     <img src="assets/big-me.png" alt="Portrait Photo" fetchpriority="high">
                     <div class="semicircle"></div>
                     <div class="medium-circle"></div>
+                    <img src="assets/triangle.svg" class="triangle triangle-1">
+                    <img src="assets/triangle.svg" class="triangle triangle-2">
+                    <img src="assets/triangle.svg" class="triangle triangle-3">
+                    <img src="assets/triangle.svg" class="triangle triangle-4">
+                    <img src="assets/triangle.svg" class="triangle triangle-5">
+                    <img src="assets/triangle.svg" class="triangle triangle-6">
+                    <img src="assets/triangle.svg" class="triangle triangle-7">
+                    <img src="assets/triangle.svg" class="triangle triangle-8">
                     <div class="circle-1"></div>
                     <div class="circle-2"></div>
                     <div class="circle-3"></div>
