--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                     <img src="assets/big-me.png" alt="Portrait Photo" fetchpriority="high">
                     <div class="semicircle"></div>
                     <div class="medium-circle"></div>
-                    <img src="assets/triangle.svg" class="triangle triangle-1">
+                    <div class="circle-1"></div>
+                    <div class="circle-2"></div>
+                    <div class="circle-3"></div>
+                    <div class="circle-4"></div>
+                    <div class="circle-5"></div>
+                    <div class="circle-6"></div>
+                    <div class="circle-7"></div>
                 </div>
             </div>
             <div class="introText">
