--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             </div>
         </div>
     </section>
+    <section class="mintro">
+        <div class="container grid">
+            
+        </div>
+    </section>
 </body>
 
 </HTML>
