--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     <section class="mintro">
         <div class="container grid">
-            
+            <div class="line1"></div>
         </div>
     </section>
 </body>
