--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
             <div class="visualDesign">
                 <div class="visualizeMe">
                     <img src="assets/big-me.png" alt="Portrait Photo" fetchpriority="high">
-                    <div class="semicircle"></div>
-                    <div class="medium-circle"></div>
-                    <img src="assets/triangle.svg" class="triangle triangle-1">
-                    <img src="assets/triangle.svg" class="triangle triangle-2">
-                    <img src="assets/triangle.svg" class="triangle triangle-3">
-                    <img src="assets/triangle.svg" class="triangle triangle-4">
-                    <img src="assets/triangle.svg" class="triangle triangle-5">
-                    <img src="assets/triangle.svg" class="triangle triangle-6">
-                    <img src="assets/triangle.svg" class="triangle triangle-7">
-                    <img src="assets/triangle.svg" class="triangle triangle-8">
-                    <div class="circle-1"></div>
-                    <div class="circle-2"></div>
-                    <div class="circle-3"></div>
-                    <div class="circle-4"></div>
-                    <div class="circle-5"></div>
-                    <div class="circle-6"></div>
-                    <div class="circle-7"></div>
+                    <div class="semicircle" onerror="this.style.display='none'"></div>
+                    <div class="medium-circle" onerror="this.style.display='none'"></div>
+                    <img src="assets/triangle.svg" class="triangle triangle-1" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-2" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-3" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-4" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-5" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-6" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-7" onerror="this.style.display='none'">
+                    <img src="assets/triangle.svg" class="triangle triangle-8" onerror="this.style.display='none'">
+                    <div class="circle-1" onerror="this.style.display='none'"></div>
+                    <div class="circle-2" onerror="this.style.display='none'"></div>
+                    <div class="circle-3" onerror="this.style.display='none'"></div>
+                    <div class="circle-4" onerror="this.style.display='none'"></div>
+                    <div class="circle-5" onerror="this.style.display='none'"></div>
+                    <div class="circle-6" onerror="this.style.display='none'"></div>
+                    <div class="circle-7" onerror="this.style.display='none'"></div>
                 </div>
             </div>
             <div class="introText">
@@ -63,9 +63,10 @@
         </div>
     </section>
     <section class="mintro">
-        <div class="container grid">
-            <div class="line1"></div>
-        </div>
+        <div class="about-line">About Me</div>
+        
+        <img src="assets/val.png" class="photo-frame">
+        <img src="assets/ach.png" class="photo-frame">
     </section>
 </body>
 
