--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
     </section>
     <section class="mintro">
         <div class="about-line">About Me</div>
-        
-        <img src="assets/val.png" class="photo-frame">
-        <img src="assets/ach.png" class="photo-frame">
+        <img src="assets/val.png" class="photoF">
+        <img src="assets/ach.png" class="photoF">
     </section>
 </body>
 
