--- a/index.html
+++ b/index.html
@@ -62,10 +62,25 @@
             </div>
         </div>
     </section>
+    <div class="about-line">About Me</div>
     <section class="mintro">
-        <div class="about-line">About Me</div>
-        <img src="assets/val.png" class="photoF">
-        <img src="assets/ach.png" class="photoF">
+        <div class="imageInfo">
+            <div class="valShapes">
+                <img src="assets/triangle.svg" class="triangle triangle-1" onerror="this.style.display='none'">
+            </div>
+            <img src="assets/val.png">
+            <p>Delivering valedictorian speech (2023)</p>
+        </div>
+        <div class="imageInfo">
+            <img src="assets/ach.png">
+            <p>Top Computer Science Student at High School (2023)</p>
+        </div>
+        <div class="eduSection">
+            <h2 class="sectionTitle">Education</h2>
+            <p class="parText">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of Information and a
+                minor in Data Science at the University of British Columbia. I have a strong passion for data analysis
+                and software engineering.</p>
+        </div>
     </section>
 </body>
 
