--- a/index.html
+++ b/index.html
@@ -65,22 +65,52 @@
     <div class="about-line">About Me</div>
     <section class="mintro">
         <div class="imageInfo">
-            <div class="valShapes">
-            </div>
-            <img src="assets/val.png">
+            <img src="assets/val.png" class="storyImg">
             <p>Delivering valedictorian speech (2023)</p>
+            <div class="shapeStorage">
+                <div class="circle-intro" onerror="this.style.display='none'"></div>
+                <img src="assets/triangle.svg" class="shapen triangle-9" onerror="this.style.display='none'">
+            </div>
         </div>
         <div class="imageInfo">
-            <img src="assets/ach.png">
+            <div class="shapeStorage">
+                <img src="assets/box.svg" class="shapen triangle-9" style="width: 70px; height: 70px;"
+                    onerror="this.style.display='none'">
+                <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(45deg);"
+                    onerror="this.style.display='none'">
+            </div>
+            <img src="assets/ach.png" class="storyImg">
             <p>Top Computer Science Student at High School (2023)</p>
         </div>
         <div class="eduSection">
             <h2 class="sectionTitle">Education</h2>
-            <p class="parText">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of Information and a
+            <p class="parText">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of
+                Information and a
                 minor in Data Science at the University of British Columbia. I have a strong passion for data analysis
                 and software engineering.</p>
+            <div class="shapeStorage" style="grid-template-columns: 1fr 1fr 1fr 1fr 1fr; width: 500px; margin-left: 0;">
+                <img src="assets/box.svg" class="shapen triangle-9"
+                    style="width: 70px; height: 70px; transform: translateY(50px) rotate(-30deg);"
+                    onerror="this.style.display='none'">
+                <div class="circle-intro" style="transform: translateY(120px);" onerror="this.style.display='none'">
+                </div>
+                <div class="circle-intro" style="transform: translateY(40px);" onerror="this.style.display='none'">
+                </div>
+                <img src="assets/triangle.svg" class="shapen triangle-9" style="transform: rotate(45deg);"
+                    onerror="this.style.display='none'">
+                <img src="assets/box.svg" class="shapen triangle-9"
+                    style="width: 70px; height: 70px; transform: translateY(50px) rotate(30deg);">
+            </div>
         </div>
     </section>
+    <div class="about-right">
+            <img src="assets/triangle.svg" class="shapen" style="transform: rotate(-36deg);"
+                    onerror="this.style.display='none'">
+        </div>
+    <div class="about-left">
+            <img src="assets/triangle.svg" class="shapen" style="transform: rotate(45deg);"
+                    onerror="this.style.display='none'">
+        </div>
 </body>
 
 </HTML>
