--- a/index.html
+++ b/index.html
@@ -104,13 +104,26 @@
         </div>
     </section>
     <div class="about-right">
-            <img src="assets/triangle.svg" class="shapen" style="transform: rotate(-36deg);"
-                    onerror="this.style.display='none'">
+        <img src="assets/triangle.svg" class="shapen" style="transform: rotate(-36deg);"
+            onerror="this.style.display='none'">
+    </div>
+    </section>
+    <section class="meBack">
+        <div class="backSection">
+            <h2 class="sectionTitle">Background</h2>
+            <p class="parText">I taught myself Python at 11, which sparked a long-standing passion for programming and
+                data. Since then, I've spent years exploring everything from software and app development to
+                cybersecurity and web design. In high school, I ran a programming club where I taught others how to
+                code, focusing on Python and web design. Alongside formal experience in both high school and university,
+                coding has always been something I pursued naturally, driven by curiosity, a love for teaching, and a
+                deep appreciation for logic and clean problem-solving.</p>
+            </div>
         </div>
+    </section>
     <div class="about-left">
-            <img src="assets/triangle.svg" class="shapen" style="transform: rotate(45deg);"
-                    onerror="this.style.display='none'">
-        </div>
+        <img src="assets/triangle.svg" class="shapen" style="transform: rotate(45deg);"
+            onerror="this.style.display='none'">
+    </div>
 </body>
 
 </HTML>
