--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
     </section>
     <div class="about-left">
-        <img src="assets/triangle.svg" class="shapen" style="transform: rotate(45deg);"
+        <img src="assets/box.svg" class="shapen" style="width: 70px; height: 70px;"
             onerror="this.style.display='none'">
     </div>
 </body>
