--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@
                 code, focusing on Python and web design. Alongside formal experience in both high school and university,
                 coding has always been something I pursued naturally, driven by curiosity, a love for teaching, and a
                 deep appreciation for logic and clean problem-solving.</p>
-            </div>
         </div>
     </section>
     <div class="about-left">
-        <img src="assets/box.svg" class="shapen" style="width: 70px; height: 70px;"
-            onerror="this.style.display='none'">
+        <img src="assets/box.svg" class="shapen" style="width: 70px; height: 70px;" onerror="this.style.display='none'">
     </div>
 </body>
 
