--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="introText">
                 <h1>Welcome!</h1>
-                <h3>I'm Matthew Molski<br>UBC Math & Data Science</h3>
+                <h3>I'm <u>Matthew Molski</u><br>UBC Math & Data Science</h3>
                 <br>
                 <h4>Software Developer<br>Aspiring Data Scientist</h4>
                 <a class="myWorkButton" href="">My Work</a>
@@ -66,7 +66,7 @@
     <section class="mintro">
         <div class="imageInfo">
             <img src="assets/val.png" class="storyImg">
-            <p>Delivering valedictorian speech (2023)</p>
+            <p>Delivering Valedictorian speech (2023)</p>
             <div class="shapeStorage">
                 <div class="circle-intro" onerror="this.style.display='none'"></div>
                 <img src="assets/triangle.svg" class="shapen triangle-9" onerror="this.style.display='none'">
@@ -84,7 +84,7 @@
         </div>
         <div class="eduSection">
             <h2 class="sectionTitle">Education</h2>
-            <p class="parText">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of
+            <p class="parText" style="max-width: 500px;">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of
                 Information and a
                 minor in Data Science at the University of British Columbia. I have a strong passion for data analysis
                 and software engineering.</p>
@@ -111,12 +111,16 @@
     <section class="meBack">
         <div class="backSection">
             <h2 class="sectionTitle">Background</h2>
-            <p class="parText">I taught myself Python at 11, which sparked a long-standing passion for programming and
+            <p class="parText" style="max-width: 650px;">I taught myself Python at 11, which sparked a long-standing passion for programming and
                 data. Since then, I've spent years exploring everything from software and app development to
                 cybersecurity and web design. In high school, I ran a programming club where I taught others how to
                 code, focusing on Python and web design. Alongside formal experience in both high school and university,
                 coding has always been something I pursued naturally, driven by curiosity, a love for teaching, and a
                 deep appreciation for logic and clean problem-solving.</p>
+        </div>
+         <div class="imageInfo">
+            <img src="assets/club.png" class="storyImg">
+            <p>Teaching programming in high school (2023)</p>
         </div>
     </section>
     <div class="about-left">
