media mobile update 1

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         </div>
         <div class="eduSection">
             <h2 class="sectionTitle">Education</h2>
-            <p class="parText" style="max-width: 500px;">Currently pursuing a BSc in Mathematics with a concentration in Mathematics of
+            <p class="parText">Currently pursuing a BSc in Mathematics with a concentration in
+                Mathematics of
                 Information and a
                 minor in Data Science at the University of British Columbia. I have a strong passion for data analysis
                 and software engineering.</p>
@@ -111,20 +112,66 @@
     <section class="meBack">
         <div class="backSection">
             <h2 class="sectionTitle">Background</h2>
-            <p class="parText" style="max-width: 650px;">I taught myself Python at 11, which sparked a long-standing passion for programming and
+            <p class="parText" style="max-width: 650px;">I taught myself Python at 11, which sparked a long-standing
+                passion for programming and
                 data. Since then, I've spent years exploring everything from software and app development to
                 cybersecurity and web design. In high school, I ran a programming club where I taught others how to
                 code, focusing on Python and web design. Alongside formal experience in both high school and university,
                 coding has always been something I pursued naturally, driven by curiosity, a love for teaching, and a
                 deep appreciation for logic and clean problem-solving.</p>
         </div>
-         <div class="imageInfo">
+        <div class="middleContent">
+            <img src="assets/triangle.svg" class="shapen" style="transform: rotate(45deg);"
+                onerror="this.style.display='none'">
+            <div class="circle-intro" style="transform: translateX(100px);" onerror="this.style.display='none'">
+            </div>
+            <img src="assets/box.svg" class="shapen triangle-9"
+                style="width: 70px; height: 70px; transform: translateY(50px) rotate(50deg);">
+            <img src="assets/box.svg" class="shapen triangle-9"
+                style="width: 70px; height: 70px; transform: translateX(200px)">
+            <div class="circle-intro" style="transform: translateY(-200px) translateX(230px);"
+                onerror="this.style.display='none'">
+            </div>
+        </div>
+        <div class="imageInfo">
             <img src="assets/club.png" class="storyImg">
             <p>Teaching programming in high school (2023)</p>
         </div>
     </section>
     <div class="about-left">
         <img src="assets/box.svg" class="shapen" style="width: 70px; height: 70px;" onerror="this.style.display='none'">
+    </div>
+    <section class="meInterest">
+        <div class="imageInfo">
+            <img src="assets/judo.png" class="storyImg">
+            <p>Winning Gold BC Winter Games (2020)</p>
+        </div>
+        <div class="middleContent">
+            <img src="assets/triangle.svg" class="shapen" style="transform: translateX(250%);"
+                onerror="this.style.display='none'">
+            <img src="assets/triangle.svg" class="shapen" style="transform: translateX(-60px) rotate(180deg);"
+                onerror="this.style.display='none'">
+            <div class="circle-intro" style="transform: translateX(60px);" onerror="this.style.display='none'">
+            </div>
+            <img src="assets/box.svg" class="shapen triangle-9"
+                style="width: 70px; height: 70px; transform: translateY(70px);">
+            <img src="assets/triangle.svg" class="shapen" style="transform: translateX(20px) rotate(180deg);"
+                onerror="this.style.display='none'">
+        </div>
+        <div class="backSection">
+            <h2 class="sectionTitle">Interests & Hobbies</h2>
+            <p class="parText" style="max-width: 650px;">Beyond academics, I've always been deeply curious about the
+                natural world. From a young age, I developed a passion for astronomy, geology, and physics, spending
+                hours stargazing through telescopes, building a diverse rock collection, and reading books like my
+                recent read: The World According to Physics by Professor Al-Khalili. I value learning as a lifelong
+                pursuit. Alongside these interests, I've trained in judo for over 9 years, earning top placements in
+                major tournaments such as the 2020 BC Winter Games. Judo has taught me the importance of discipline,
+                respect, perseverance, and mental resilience.</p>
+        </div>
+    </section>
+    <div class="about-right">
+        <img src="assets/triangle.svg" class="shapen" style="transform: rotate(-216deg);"
+            onerror="this.style.display='none'">
     </div>
 </body>
 
