--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </p>
             <nav>
                 <ul>
-                    <li><a href="">About Me</a></li>
-                    <li><a href="">My Work</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#aboutMe">About Me</a></li>
+                    <li><a href="#myWork">My Work</a></li>
+                    <li><a href="#contactMe">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -58,11 +58,11 @@
                 <h3>I'm <u>Matthew Molski</u><br>UBC Math & Data Science</h3>
                 <br>
                 <h4>Software Developer<br>Aspiring Data Scientist</h4>
-                <a class="myWorkButton" href="">My Work</a>
+                <a class="myWorkButton" href="#myWork">My Work</a>
             </div>
         </div>
     </section>
-    <div class="about-line">About Me</div>
+    <div class="about-line" id="aboutMe">About Me</div>
     <section class="mintro">
         <div class="imageInfo">
             <img src="assets/val.png" class="storyImg">
@@ -173,6 +173,13 @@
         <img src="assets/triangle.svg" class="shapen" style="transform: rotate(-216deg);"
             onerror="this.style.display='none'">
     </div>
+    <div class="about-line" id="aboutMe">My Work</div>
+    <section id="myWork">
+
+    </section>
+    <section id="contactMe">
+
+    </section>
 </body>
 
 </HTML>
