--- a/index.html
+++ b/index.html
@@ -175,11 +175,24 @@
     </div>
     <div class="about-line" id="aboutMe">My Work</div>
     <section id="myWork">
-
+        <div>
+            <div class="top-circle" onerror="this.style.display='none'"></div>
+            <div class="center-line"></div>
+            <!--right side first -->
+            <div class="horizontal-line" style="transform: translateY(-900px); margin-left: 50%;"></div>
+            <div class="pointGroup" style="transform: translateY(-900px);  margin-left: 918px;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                    <p class="picTitle">Number Game</p>
+                <img src="assets/ng.png" class="workShown">
+            </div>
+        </div>
     </section>
-    <section id="contactMe">
+    <footer id="contactMe">
 
-    </section>
+    </footer>
 </body>
 
 </HTML>
