--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="center-line"></div>
             <!--right side first -->
             <div class="horizontal-line" style="transform: translateY(-900px); margin-left: 50%;"></div>
-            <div class="pointGroup" style="transform: translateY(-900px);  margin-left: 918px;">
+            <div class="pointGroup" style="transform: translateY(-900px);  margin-left: 60.2%;">
                 <div class="pointer-line"></div>
                 <img src="assets/triangle.svg" class="shapen"
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
