--- a/index.html
+++ b/index.html
@@ -178,15 +178,51 @@
         <div>
             <div class="top-circle" onerror="this.style.display='none'"></div>
             <div class="center-line"></div>
-            <!--right side first -->
-            <div class="horizontal-line" style="transform: translateY(-900px); margin-left: 50%;"></div>
-            <div class="pointGroup" style="transform: translateY(-900px);  margin-left: 60.2%;">
+
+            <!--NUM Game-->
+            <div class="horizontal-line" style="transform: translateY(-1900px); left: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(50%) translateY(-1900px); right: 25%;">
                 <div class="pointer-line"></div>
                 <img src="assets/triangle.svg" class="shapen"
                     style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
                     onerror="this.style.display='none'">
-                    <p class="picTitle">Number Game</p>
+                <p class="picTitle">Number Game</p>
                 <img src="assets/ng.png" class="workShown">
+                <p class="workText">I developed a digital implementation of the classic NIM strategy game, showcasing
+                    algorithmic thinking, clean code architecture, and problem-solving skills by translating
+                    mathematical game theory into a functional turn-based system with proper state management and user
+                    interaction handling.</p>
+            </div>
+
+            <!--Family Tree Software-->
+            <div class="horizontal-line" style="transform: translateY(-1350px); right: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(-50%) translateY(-1350px); left: 25%;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                <p class="picTitle">Family Tree Software</p>
+                <img src="assets/ftsw.png" class="workShown">
+                <p class="workText">I developed a comprehensive family tree management software featuring a full-stack
+                    GUI application with data persistence, and statistical analysis
+                    capabilities, including member management, age comparisons, lifespan calculations, and file I/O
+                    operations, demonstrating strong object-oriented design, user interface development, and software
+                    architecture skills.</p>
+            </div>
+
+            <!--NUM Game-->
+            <div class="horizontal-line" style="transform: translateY(-800px); left: 50%;"></div>
+            <div class="pointGroup" style="transform:  translateX(50%) translateY(-800px); right: 25%;">
+                <div class="pointer-line"></div>
+                <img src="assets/triangle.svg" class="shapen"
+                    style="transform: translateY(-20px) rotate(-37deg); margin-left: 43.62%;"
+                    onerror="this.style.display='none'">
+                <p class="picTitle">Number Game</p>
+                <img src="assets/ng.png" class="workShown">
+                <p class="workText">I developed a digital implementation of the classic NIM strategy game, showcasing
+                    algorithmic thinking, clean code architecture, and problem-solving skills by translating
+                    mathematical game theory into a functional turn-based system with proper state management and user
+                    interaction handling.</p>
             </div>
         </div>
     </section>
